# rust-mcp-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
