[package]
name = "mcp-demo"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.9" #misma version que pide swagger
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] } #9.0.1 -> problema con dependencias
serde_json = "1.0"
hyper = "1"

